--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   <!-- Header -->
   <header class="bg-primary dark:bg-gray-800 text-white py-4 px-6 shadow-lg w-full">
     <div class="max-w-5xl mx-auto flex items-center justify-between">
-      <h1 class="text-3xl font-bold">ZynTelebot</h1>
+      <h1 class="text-3xl font-bold">KleeBot</h1>
       <button 
         onclick="toggleTheme()" 
         class="w-12 h-6 bg-gray-300 dark:bg-gray-600 rounded-full flex items-center px-1 transition duration-300 focus:outline-none shadow">
@@ -48,8 +48,8 @@
   <!-- Main Content -->
   <main class="bg-white dark:bg-gray-800 border border-gray-200 dark:border-gray-700 shadow-md rounded-xl p-8 mt-8 w-full max-w-3xl mx-4">
     <div class="text-center">
-      <img src="https://telegra.ph/file/7a385897829927b981dfa.jpg" 
-           alt="ZynTelebot Logo" class="w-24 h-24 mx-auto rounded-full shadow mb-4 border border-gray-300 dark:border-gray-600">
+      <img src="https://cdn.arifzyn.tech/f/0ddjpfmo.jpg" 
+           alt="KleeBot Logo" class="w-24 h-24 mx-auto rounded-full shadow mb-4 border border-gray-300 dark:border-gray-600">
       <h2 class="text-2xl font-semibold text-gray-800 dark:text-gray-200">Welcome to ZynTelebot</h2>
       <p class="text-gray-600 dark:text-gray-400 mt-2">
         Your assistant bot to make your day easier. Start exploring now by clicking the button below!
